--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -45,7 +45,7 @@ code {
   font-size: 0.85714em;
   font-weight: bold;
   margin: 0 2px 0px 0px;
-  padding: 2px 5px;
+  padding: 0px 4px;
   vertical-align: baseline;
 }
 pre code {
@@ -165,7 +165,7 @@ a:hover {
   padding: 3em 0em;
   background-color: #FFFFFF;
   border-bottom: 1px solid #DDDDDD;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: none;
 }
 #example .masthead.segment h1 {
   margin-bottom: 0em;
@@ -577,6 +577,11 @@ body#example {
   Settings Table
 -----------------*/
 
+#example .main.container .ui.celled.definition.table thead:not(.full-width) th:first-child {
+  background-color: #f7f7f7;
+  box-shadow: 0 -1px 0 1px #f7f7f7;
+}
+
 #example .settings.table {
   margin-bottom: 20px;
 }
@@ -647,7 +652,7 @@ body#example {
 /* Header */
 #example .example > h4:first-child {
   font-size: 18px;
-  margin: -0.2em 0em 0em;
+  margin: 0em 0em 0.25em;
 }
 
 /* Wireframe Image */
@@ -669,7 +674,7 @@ body#example {
 #example .example .anchor + p {
   font-size: 14px;
   margin-top: 0;
-  padding-bottom: 1.5em;
+  padding-bottom: 1em;
 }
 #example .no.example .anchor + p {
   margin: 0em 0px 1em;
@@ -1633,6 +1638,7 @@ body.progress.animated .ui.progress .bar {
 
 /* page layout */
 #example .full.height > .toc {
+  position: relative;
   background-color: #1b1c1d;
   width: 250px;
   flex: 0 0 auto;
@@ -1642,7 +1648,7 @@ body.progress.animated .ui.progress .bar {
   border-width: 0 1px 0 0;
   box-shadow: none;
   margin: 0;
-  width: 100%;
+  width: inherit;
 }
 #example .article {
   flex: 1 1 auto;
@@ -1664,7 +1670,7 @@ body.progress.animated .ui.progress .bar {
 }
 
 #example .main.container {
-  padding: 5em 0em 7em;
+  padding: 2em 0em 7em;
   z-index: 1;
 }
 #example .wide.main.container {
@@ -1933,7 +1939,7 @@ body.progress.animated .ui.progress .bar {
     left: 100%;
     padding-left: 0em;
     position: absolute;
-    top: 0em;
+    bottom: 0em;
     vertical-align: top;
   }
 
@@ -1959,40 +1965,44 @@ body.progress.animated .ui.progress .bar {
 }
 
 
-/* Switch to Fluid Width */
-@media only screen and (min-width : 999px) and (max-width: 1250px) {
-  #example .main.container,
+/* Adjust Gutters */
+@media only screen and (min-width : 999px) and (max-width: 1300px) {
   #example .masthead > .container,
+  #example .main.container,
+  #example .fixed.menu > .container,
   #example .footer > .container {
-    margin-left: 85px !important;
-    margin-right: 350px !important;
-    width: auto;
+    margin-left: 3em !important;
+    margin-right: 3em !important;
+    width: auto !important;
   }
-  /* Fixed Top Menu */
-  #example .fixed.menu > .container {
-    margin-left: 85px !important;
-    margin-right: 350px !important;
-    width: 100%;
+  #example .masthead > .container,
+  #example .main.container {
+    margin-right: 380px !important;
+  }
+  #example .masthead > .container .advertisement {
+    padding-left: 33px;
   }
 }
-@media only screen and (min-width: 1251px) {
-  #example .fixed.menu > .container,
-  #example .main.container,
+@media only screen and (min-width: 1301px) {
   #example .masthead > .container,
+  #example .main.container,
+  #example .fixed.menu > .container,
   #example .footer > .container {
-    margin-left: 5em !important;
-    width: 800px;
+    margin-left: 4em !important;
+    margin-right: 4em !important;
+    width: auto !important;
+  }
+  #example .masthead > .container,
+  #example .main.container {
+    margin-right: 380px !important;
+    max-width: 800px !important;
+  }
+  #example .masthead > .container .advertisement {
+    padding-left: 26px;
   }
 }
 
 @media only screen and (min-width: 1600px) {
-  #example .fixed.menu > .container,
-  #example .main.container,
-  #example .masthead > .container,
-  #example .footer > .container {
-    margin-left: 7em !important;
-    width: 850px;
-  }
 }
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   #example > .pusher > .full.height {
