--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="ui inverted black footer vertical segment">
   <div class="ui container">
-    <div class="ui stackable inverted divided relaxed grid">
+    <div class="ui stackable relaxed grid">
       <div class="eight wide column">
         <h3 class="ui inverted header">Help Make Semantic UI Better</h3>
         <p>Maintaining an open source UI library is no small task. Support for the continued development of Semantic UI comes directly from the community.</p>
@@ -10,7 +10,7 @@
           <button type="submit" class="ui teal button">Donate Today</button>
         </form>
       </div>
-      <div class="four wide column">
+      <div class="four wide right aligned column">
         <h5 class="ui teal inverted header">Contribute</h5>
         <div class="ui inverted link list">
           <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Translation Hub</a>
@@ -19,7 +19,7 @@
           <a class="disabled item">Create Themes</a>
         </div>
       </div>
-      <div class="four wide column">
+      <div class="four wide right aligned column">
         <h5 class="ui teal inverted header">Semantic Network</h5>
         <div class="ui inverted link list">
           <a class="item" href="http://legacy.semantic-ui.com">Legacy Docs</a>
