--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -65,18 +65,6 @@ p:first-child {
 p:last-child {
   margin-bottom: 0em;
 }
-/* links */
-code a,
-a code,
-a {
-  color: #009FDA;
-  text-decoration: none;
-}
-code a:hover,
-a:hover code,
-a:hover {
-  color: #00BAFF;
-}
 
 .less-error-message {
   /*display: none !important;*/
@@ -1678,13 +1666,17 @@ body.progress.animated .ui.progress .bar {
   max-width: 1140px;
 }
 
+#example .main.container > .right.rail,
+#example .main.container > .tab > .examples > .right.rail,
+#example .main.container > .tab > .right.rail {
+  padding-top: 2em;
+}
 #example .main.container > .right.rail .sticky,
 #example .main.container > .tab > .examples > .right.rail .sticky,
 #example .main.container > .tab > .right.rail .sticky {
-  margin: 2em 0em;
-  padding-bottom: 2em;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+  padding-bottom: 2em;
 }
 #example .right.rail .accordion.menu .active.item {
   background-color: transparent;
