--- a/server/partials/examples/dimmer.html
+++ b/server/partials/examples/dimmer.html
@@ -68,7 +68,7 @@
 </div>
 
 <style type="text/css">
-  .dimmer.demo {
+  .dimmer.demo:not(.page) {
     margin: 2em 0em;
   }
   h4 + .dimmer.demo {
