--- a/server/files/stylesheets/shape.css
+++ b/server/files/stylesheets/shape.css
@@ -10,8 +10,7 @@
 }
 
 #example .dog.shape {
-  float: left;
-  margin: 0 1em 3em 0;
+  margin: 0em 0em 3em;
 }
 
 #example .dog.shape .side .item {
