--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -492,7 +492,7 @@ body#example {
 #example.basic .masthead > .container,
 #example.basic .footer > .container {
   position: relative;
-  width: 700px;
+  width: 700px !important;
   left: 0px;
   margin-right: 4em !important;
 }
@@ -504,10 +504,10 @@ body#example {
 #example.basic .main.container > .tab > .rail {
   display: none !important;
 }
-#example.basic .main.container .introduction p,
-#example.basic .main.container .tab > p,
-#example.basic .main.container .example > p,
-#example.basic .main.container > p {
+#example .main.container .introduction p,
+#example .main.container .tab > p,
+#example .main.container .example > p,
+#example .main.container > p {
   font-size: 16px;
   line-height: 1.5;
   color: rgba(0, 0, 0, 0.8);
@@ -634,7 +634,6 @@ body#example {
 }
 #example .example > .ignored,
 #example .example > .ignore,
-#example .no.example > *,
 #example .example > p {
   max-width: 700px;
 }
@@ -646,7 +645,7 @@ body#example {
 /* Header */
 #example .example > h4:first-child {
   font-size: 18px;
-  margin: 0em 0em 0.25em;
+  margin: 0em 0em 0em;
 }
 
 /* Wireframe Image */
@@ -727,6 +726,7 @@ body#example {
 #example .intro .example > p {
   color: rgba(0, 0, 0, 0.8);
 }
+
 
 #example .existing.segment:after,
 #example .instructive.segment:after {
@@ -1638,6 +1638,7 @@ body.progress.animated .ui.progress .bar {
 /* page layout */
 #example .full.height > .toc {
   position: relative;
+  z-index: 2;
   background-color: #1b1c1d;
   width: 250px;
   flex: 0 0 auto;
@@ -1997,6 +1998,7 @@ body.progress.animated .ui.progress .bar {
     margin-left: 4em !important;
     margin-right: 4em !important;
     width: auto !important;
+    max-width: 1200px !important;
   }
   #example .masthead > .container,
   #example .main.container {
