Updates to docs

--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -256,7 +256,7 @@ p:last-child {
   background-color: #F7F7F7;
   padding: 8px;
   font-size: 12px;
-  font-family: Helvetica Neue, Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
   overflow: hidden;
   float: right;
   -moz-border-radius: 5px;
