--- a/server/partials/examples/single/flag-menu.html
+++ b/server/partials/examples/single/flag-menu.html
@@ -125,8 +125,8 @@
   <div class="item" data-value="li"><i class="li flag"></i>Liechtenstein</div>
   <div class="item" data-value="lt"><i class="lt flag"></i>Lithuania</div>
   <div class="item" data-value="lu"><i class="lu flag"></i>Luxembourg</div>
-  <div class="item" data-value="mo"><i class="mo flag"></i>MacAu</div>
-  <div class="item" data-value="mk"><i class="mk flag"></i>MacEdonia</div>
+  <div class="item" data-value="mo"><i class="mo flag"></i>Macau</div>
+  <div class="item" data-value="mk"><i class="mk flag"></i>Macedonia</div>
   <div class="item" data-value="mg"><i class="mg flag"></i>Madagascar</div>
   <div class="item" data-value="mw"><i class="mw flag"></i>Malawi</div>
   <div class="item" data-value="my"><i class="my flag"></i>Malaysia</div>
@@ -206,7 +206,7 @@
   <div class="item" data-value="lk"><i class="lk flag"></i>Sri Lanka</div>
   <div class="item" data-value="sd"><i class="sd flag"></i>Sudan</div>
   <div class="item" data-value="sr"><i class="sr flag"></i>Suriname</div>
-  <div class="item" data-value="sj"><i class="sj flag"></i>Svalbard, I Flag Jan Mayen</div>
+  <div class="item" data-value="sj"><i class="sj flag"></i>Svalbard</div>
   <div class="item" data-value="sz"><i class="sz flag"></i>Swaziland</div>
   <div class="item" data-value="se"><i class="se flag"></i>Sweden</div>
   <div class="item" data-value="ch"><i class="ch flag"></i>Switzerland</div>
