--- a/server/partials/examples/modal.html
+++ b/server/partials/examples/modal.html
@@ -7,7 +7,7 @@
   <div class="header">
     Profile Picture
   </div>
-  <div class="content">
+  <div class="image content">
     <div class="ui medium image">
       <img src="/images/avatar/large/chris.jpg">
     </div>
@@ -32,7 +32,7 @@
   <div class="header">
     Archive Old Messages
   </div>
-  <div class="content">
+  <div class="image content">
     <div class="image">
       <i class="archive icon"></i>
     </div>
