--- a/server/partials/language-modal.html
+++ b/server/partials/language-modal.html
@@ -1,7 +1,7 @@
 <div class="ui basic language modal">
   <i class="close icon"></i>
   <div class="header">The <span class="name"></span> Translation Needs Your Help</div>
-  <div class="content">
+  <div class="image content">
     <div class="middle aligned image">
       <i class="world icon"></i>
     </div>
@@ -27,7 +27,7 @@
 <div class="ui basic chinese modal">
   <i class="close icon"></i>
   <div class="header">Would you like to visit the mirror site?</div>
-  <div class="content">
+  <div class="image content">
     <div class="middle aligned image">
       <i class="question icon"></i>
     </div>
