--- a/server/partials/examples/item.html
+++ b/server/partials/examples/item.html
@@ -13,7 +13,7 @@
         A description which may flow for several lines and give context to the content.
       </div>
       <div class="extra">
-        <img src="/images/wireframe/square-image.png" class="ui circular avatar"> Username
+        <img src="/images/wireframe/square-image.png" class="ui circular avatar image"> Username
       </div>
     </div>
   </div>
