--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -1,33 +1,47 @@
-<div class="ui inverted black footer vertical segment">
-  <div class="ui container">
-    <div class="ui stackable relaxed grid">
-      <div class="eight wide column">
-        <h3 class="ui inverted header">Help Make Semantic UI Better</h3>
-        <p>Maintaining an open source UI library is no small task. Support for the continued development of Semantic UI comes directly from the community.</p>
+<div class="ui black inverted vertical footer segment">
+  <div class="ui center aligned container">
+    <div class="ui stackable inverted grid">
+      <div class="three wide column">
+        <h4 class="ui inverted header">Community</h4>
+        <div class="ui inverted link list">
+          <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Help Translate</a>
+          <a class="item" href="https://github.com/Semantic-Org/Semantic-UI/issues" target="_blank">Submit an Issue</a>
+          <a class="item" href="https://gitter.im/Semantic-Org/Semantic-UI" target="_blank">Join our Chat</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header">Network</h4>
+        <div class="ui inverted link list">
+          <a class="item" href="http://www.learnsemantic.com">Learn Semantic</a>
+          <a class="item" href="https://github.com/Semantic-Org/Semantic-UI" target="_blank">GitHub Repo</a>
+          <a class="item" href="http://legacy.semantic-ui.com">1.0 Docs</a>
+          <a class="item" href="http://alpha.semantic-ui.com">0.x Docs</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header">Learn</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="disabled item">Example Layouts</a>
+          <a href="#" class="disabled item">The Project</a>
+          <a href="#" class="disabled item">Roadmap</a>
+          <a href="#" class="disabled item">About the Author</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui inverted teal header">Help Preserve This Project</h4>
+        <p> Support for the continued development of Semantic UI comes directly from the community.</p>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="7ZAF2Q8DBZAQL">
-          <button type="submit" class="ui teal button">Donate Today</button>
+          <button type="submit" class="ui large teal button">Donate Today</button>
         </form>
       </div>
-      <div class="four wide right aligned column">
-        <h5 class="ui teal inverted header">Contribute</h5>
-        <div class="ui inverted link list">
-          <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Translation Hub</a>
-          <a class="item" href="https://github.com/Semantic-Org/Semantic-UI" target="_blank">Issue Tracker</a>
-          <a class="item" href="/cla.html" target="_blank">CLA</a>
-          <a class="disabled item">Create Themes</a>
-        </div>
-      </div>
-      <div class="four wide right aligned column">
-        <h5 class="ui teal inverted header">Semantic Network</h5>
-        <div class="ui inverted link list">
-          <a class="item" href="http://legacy.semantic-ui.com">Legacy Docs</a>
-          <a class="item" href="http://www.learnsemantic.com">Learn Semantic</a>
-          <a class="disabled item">Semantic Themes</a>
-          <a class="disabled item">Semantic Layouts</a>
-        </div>
-      </div>
+    </div>
+    <div class="ui inverted section divider"></div>
+    <img src="/images/logo.png" class="ui centered mini image">
+    <div class="ui horizontal inverted small divided link list">
+      <a class="item" href="/cla.html" target="_blank">Contributor Agreement (CLA)</a>
+      <a class="item" href="http://semantic-ui.mit-license.org/" target="_blank">Free & Open Source (MIT)</a>
     </div>
   </div>
 </div>
