Fix prerendered examples

--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -7,6 +7,7 @@
           <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Help Translate</a>
           <a class="item" href="https://github.com/Semantic-Org/Semantic-UI/issues" target="_blank">Submit an Issue</a>
           <a class="item" href="https://gitter.im/Semantic-Org/Semantic-UI" target="_blank">Join our Chat</a>
+          <a class="item" href="/cla.html" target="_blank">CLA</a>
         </div>
       </div>
       <div class="three wide column">
@@ -40,7 +41,6 @@
     <div class="ui inverted section divider"></div>
     <img src="/images/logo.png" class="ui centered mini image">
     <div class="ui horizontal inverted small divided link list">
-      <a class="item" href="/cla.html" target="_blank">Contributor Agreement (CLA)</a>
       <a class="item" href="http://semantic-ui.mit-license.org/" target="_blank">Free & Open Source (MIT)</a>
     </div>
   </div>
