--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -383,12 +383,12 @@ p:last-child {
   position: relative;
   z-index: 2;
 }
-#example .introduction {
+#example .masthead .introduction {
   display: table-cell;
   vertical-align: top;
   width: 100%;
 }
-#example .introduction .theme.buttons {
+#example .masthead .introduction .theme.buttons {
   margin: -0.1em 0em 0em 0.5em;
   vertical-align: middle;
 }
@@ -1986,10 +1986,10 @@ body.progress.animated .ui.progress .bar {
 @media only screen and (min-width : 999px) {
 
   /* Advert in Rail */
-  #example .introduction {
+  #example .masthead .introduction {
     display: block;
   }
-  #example .advertisement {
+  #example .masthead .advertisement {
     left: 100%;
     padding-left: 0em;
     position: absolute;
