Updates to docs

--- a/server/partials/examples/menu.html
+++ b/server/partials/examples/menu.html
@@ -1,4 +1,4 @@
-<div class="ui three item teal menu">
+<div class="ui three item menu">
   <a class="active item">
     A
   </a>
@@ -10,7 +10,7 @@
   </a>
 </div>
 <div class="ui vertical demo menu">
-  <a class="active teal item">
+  <a class="active item">
     A
   </a>
   <a class="item">
