--- a/server/partials/examples/dropdown.html
+++ b/server/partials/examples/dropdown.html
@@ -351,7 +351,7 @@ Show me posts trending
   <a class="item">
     Home
   </a>
-  <div class="ui pointing dropdown link item">
+  <div class="ui dropdown item">
     <span class="text">Shopping</span>
     <i class="dropdown icon"></i>
     <div class="menu">
@@ -394,7 +394,7 @@ Show me posts trending
   <a class="item">
     Home
   </a>
-  <div class="ui left pointing dropdown link item">
+  <div class="ui left pointing dropdown item">
     <i class="dropdown icon"></i>
     Messages
     <div class="menu">
